[package]
name = "catnukh_matrix_parser"
version = "0.1.0"
edition = "2024"
description = "Matrix operations parser for eeducational purpose"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
pest = "2.8.3"
pest_derive = "2.8.3"
thiserror = "2.0.17"
clap = { version = "4.5.49", features = ["derive"] }

[dev-dependencies]


